Cambio encabezados, puro blingbling

--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -1,6 +1,6 @@
 % Info para armar título.
 
-\title{Álgebra I\\ Práctica \guia\ resuelta} % título
+\title{Álgebra I\\ Práctica \guia\ Resuelta} % título
 \author{Por alumnos de Álgebra I\\
 Facultad de Ciencias Exactas y Naturales \\
 UBA} % autores y lugar
@@ -16,9 +16,18 @@ UBA} % autores y lugar
 \fancyhead[C]{Práctica \guia} % encabezado central
 \fancyhead[R]{Página \thepage} %% encabezado derecho
 
-\fancyfoot[L]{
-  \small \href{https://github.com/nad-garraz/algebraUno}{\faIcon{github} Aportar}\\ 
-         \href{https://t.me/+1znt2GV1i8cwMTNh}{\faIcon{telegram} ¿Errores? Contanos.}
-          } % pie Izquierdo
-\fancyfoot[C]{\small \update} % pie central
-\fancyfoot[R]{\small \hyperlink{indice-\guia}{Ir a índice}} % pie derecho
+\fancyfoot[EL]{
+  \href{https://github.com/nad-garraz/algebraUno}{\small \faIcon{github}
+  ¡Aportá! Correcciones, subiendo ejercicios,
+  \yellow{\FiveStar} al repo, críticas, todo sirve.}
+  }    % pie izquierdo pares
+\fancyfoot[OL]{
+  \href{https://t.me/+1znt2GV1i8cwMTNh}{\small\faIcon{telegram} ¿Errores? Mandanos tu solución,
+  \textit{\underline{prolija}}, así lo arreglamos.
+  }
+  } % pie izquierdo impares
+
+% \fancyfoot[EC]{\small \update}                                                                        % pie izquierdo pares
+\fancyfoot[R]{\small \hyperlink{indice-\guia}{
+  Ir a índice $\uparrow$}\\
+ \small \update } % pie derecho                            % pie izquierdo impares
