--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -6,21 +6,24 @@
 
 %phantomsection -> para poder saltar a un lugar sin un anchor.
 \vspace{4cm}
-\hypertarget{indice-\guia}{Choose your destiny:}
 
-\begin{itemize}
-	\item \hyperlink{teoria-\guia}{Notas teóricas}
+\begin{center}
+  \hypertarget{indice-\guia}{\Large\textit{Choose your destiny: }}
 
-	\item
-	      Ejercicios de la guía:
-	      \begin{multicols}{8}
-		      \foreach \ejer in {1,...,\cantidadEjerciciosGuia}{
-				      \refEjercicio{ej:\ejer}\\
-			      }
-	      \end{multicols}
+	\begin{itemize}
+		\item \hyperlink{teoria-\guia}{Notas teóricas}
 
-	\item \hyperlink{extras-\guia}{Ejercicios Extras}
+		\item
+		      Ejercicios de la guía:
+		      \begin{multicols}{8}
+			      \foreach \ejer in {1,...,\cantidadEjerciciosGuia}{
+					      \refEjercicio{ej:\ejer}\\
+				      }
+		      \end{multicols}
 
-\end{itemize}
+		\item \hyperlink{extras-\guia}{Ejercicios Extras}
+
+	\end{itemize}
+\end{center}
 
 \newpage % nueva página
