--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper, spanish]{article}
+\documentclass[12pt, a4paper, spanish, twoside]{article}
 % Sacar draft para que aparezcan las imagenes.
 % Opciones: 12pt, 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
 % Opciones de clase: article, report, letter, beamer...
@@ -44,8 +44,9 @@
     colorlinks=true,
     linkcolor=blue,
     filecolor=magenta,      
-    urlcolor=cyan,
-    pdftitle={Álgebra I. Por los alumnos.},
+    urlcolor=OliveGreen,
+    pdftitle={Álgebra I - Resuelta, sueltísima.},
+    pdfauthor={Por los alumnos y exalumnos de Álgebra I}
     }
 \urlstyle{same}
 
