--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -101,8 +101,8 @@
 % asterisco para hacer llamadas de atención
 \newcommand{\llamada}[1]{%
 	\stackrel{\textcolor{
-			\ifcase\numexpr#1 mod 5\relax
-				cyan\or magenta\or OliveGreen\or YellowOrange\or Cerulean\or
+			\ifcase\numexpr#1 mod 6\relax
+				cyan\or magenta\or OliveGreen\or YellowOrange\or Cerulean\or Violet\or Purple\or 
 			\fi
 		}
 		{\text{\FiveStar}^{#1}}%
