--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -28,6 +28,8 @@ UBA} % autores y lugar
   } % pie izquierdo impares
 
 % \fancyfoot[EC]{\small \update}                                                                        % pie izquierdo pares
-\fancyfoot[R]{\small \hyperlink{indice-\guia}{
+\fancyfoot[OR]{\small \hyperlink{indice-\guia}{
   Ir a índice $\uparrow$}\\
- \small \update } % pie derecho                            % pie izquierdo impares
+ \small \update }                           % pie derecho pares
+
+\fancyfoot[ER]{\small \hyperlink{indice-\guia}{ Ir a índice $\uparrow$}}                            % pie derecho impares
