--- a/2-guia/ejercicios-2/ej-1-2.tex
+++ b/2-guia/ejercicios-2/ej-1-2.tex
@@ -30,5 +30,16 @@
         \item $n + 2n + 3n + \dots + n^2$\\
         Respuesta: $ \sumatoria{i=1}{n} in $\\
     \end{enumerate}
-\end{enumerate}
 
+    \item
+
+	  \begin{enumerate}[label=\alph*)]
+      \item $5 \cdot 6 \cdots 99 \cdot 100$\\
+      Respuesta: $\productoria{i=5}{100}i = \frac{100!}{4!}$\\
+
+      \item $1 \cdot 2 \cdot 4 \cdot 8 \cdot 16 \cdots 1024$\\
+      Respuesta: $\productoria{i=0}{10}2^i$\\
+
+      \item $n \cdot 2n \cdot 3n \cdots n^2$\\
+      Respuesta: $\productoria{i=1}{n}in = n^n \cdot n!$\\
+\end{enumerate}
