add ej-1-7 y paquete venndiagrams

--- a/1-guia/ejercicios-1/ej-6-1.tex
+++ b/1-guia/ejercicios-1/ej-6-1.tex
@@ -1,2 +1,20 @@
 \ejercicio
-\hacer
+i)
+\begin{venndiagram3sets}
+	\fillCCapANotB
+	\fillOnlyC
+\end{venndiagram3sets}
+ii)
+\begin{venndiagram3sets}
+	\fillOnlyB
+	\fillOnlyC
+	\fillCCapBNotA
+\fillOnlyA
+	
+\end{venndiagram3sets}
+iii)
+\begin{venndiagram3sets}
+	\fillA
+	\fillOnlyB
+	\fillOnlyC
+\end{venndiagram3sets}
