--- a/1-guia/ejercicios-1/ej-7-1.tex
+++ b/1-guia/ejercicios-1/ej-7-1.tex
@@ -6,6 +6,5 @@ $\flecha{del}[gráfico] (C \inter B) - A) \union (A - B) =\\
 	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter \universo \inter \universo \inter (A^c \union B^c)=\\
 	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter (A^c \union B^c)=\\
 	= C \inter C \union C \inter B^c \union A\inter C \union A \inter B^c ... \\
-	= C \union C \inter B^c \union A\inter C \union A \inter B^c \red{... esto no puede ser así}\\
-	\blue{efectivamente, no hay que enloquecer, corto en \blue{*} \Tilde }
+	= C \union C \inter B^c \union A\inter C \union A \inter B^c \\
 $
