--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -27,6 +27,7 @@
 \usepackage{soul} % Para tachar texto en text y math mode
 \usepackage{polynom} % para división de polinomios y mcd
 \usepackage{fontawesome5} % fuentes "extras"
+\usepackage{venndiagram} % Para los diagramas de Venn
 
 \usepackage{fancyhdr} % Encabezados y pie de páginas
 % \usepackage{lipsum} % dummy text
