Ejercicio 9i de la guia 2

--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -34,6 +34,6 @@ P(1):& \ V \\
 P(n):& \ V \implies P(n+1):V
 \end{align*}
 y esto implica que $P(n): V \ \forall n \in \mathbb{N}$.
-\item dos
-\item tres
+\item \hacer
+\item \hacer
 \end{enumerate}
