--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -162,7 +162,7 @@
 
 % como el stackrel pero también se 
 % puede poner algo debajo
-\newcommand{\taa}[3]{
+\newcommand{\taa}[3]{ % [t]exto [a]rriba y [a]bajo
   \overset{\mathclap{#1}}{\underset{\mathclap{#2}}{#3}}
 }
 
