Fix typo in extra-7-5

--- a/5-guia/ejercicios-5-extra/ej-extra-7-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-7-5.tex
@@ -84,7 +84,7 @@ $
 $
 (7\cdot \yellow{11} + 8)^{2024} \conga{11}
 8^{2024} \congPTF{11}
-8^{r_10(2024)} \conga{11}
+8^{r_{10}(2024)} \conga{11}
 8^4 =
 \ub{4096}{r_{11}(4096) = 4} \congruente
 4\ (11) \Tilde
@@ -97,5 +97,5 @@ Por lo tanto los valores de $p$ que cumplen lo pedido son:
 	\ytext \\
 	p = 11
 \end{array}
-}
+}\Tilde
 
