minor change in definiciones

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -149,7 +149,7 @@
 % Stackrel text
 \newcommand{\stacktext}[2]{ \stackrel{\text{#1}}{#2} }
 \def\eq?{\stackrel{\text{?}}}
-\def\eqDef{\stackrel{\text{Def}}}
+\def\eqDef{\stackrel{\text{def}}}
 
 % Flecha con texto
 \NewDocumentCommand{\flecha}{m o}{%
