--- a/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
@@ -1,6 +1,18 @@
 \ejercicio
 \begin{enumerate}[label=\alph*)]
 \item
+    Determinar todos los valores de $n\en\naturales$ \textbf{(positivo)} para los cuales el polinomio
+    $$
+      f=X^5 + \frac{n}{3}X^4 - \frac{8}{3}X^3 + \frac{11}{3}X^2 - X
+    $$
+      tiene una raíz \textbf{entera} no nula. 
+\item
+Para el o los valores hallados en el ítem (a), factorizar el polinomio $f$ obtenido como producto de irreducibles en $\racionales[X],\reales[X]$ y $\complejos[X]$ 
+
+\sepadaradorCorto
+
+\begin{enumerate}[label=\alph*)]
+\item
 Determinar todos los valores de $n\en\naturales$ \textbf{(positivo)} para los cuales el polinomio
 $$
 f=X^5 + \frac{n}{3}X^4 - \frac{8}{3}X^3 + \frac{11}{3}X^2 - X
@@ -40,7 +52,7 @@ h(3)=0  & \iff & n=\frac{67}{9} \notin \naturales \\
 \end{array}
 $ \\
 \\
-\textbf{Rta:} $n=5$ es el unico valor de $n\in\naturales$ para los cuales el polinomio $f$ tiene una raíz entera no nula.\\
+\textbf{Rta:} $n=5$ es el único valor de $n\in\naturales$ para los cuales el polinomio $f$ tiene una raíz entera no nula.\\
 \\
 \item 
 Para el o los valores hallados en el ítem (a), factorizar el polinomio $f$ obtenido como producto de irreducibles en $\racionales[X],\reales[X]$ y $\complejos[X]$ \\
@@ -51,7 +63,7 @@ $$
 f=X^5 + \frac{5}{3}X^4 - \frac{8}{3}X^3 + \frac{11}{3}X^2 - X = 
 X(X^4 + \frac{5}{3}X^3 - \frac{8}{3}X^2 + \frac{11}{3}X - 1)
 $$
-Se, por el item (a), que $-3$ es una de las raices racionales de $f$. Busco otras posibles raices racionales en el polinomio $h$ (con $n=5$) obtenido en el item (a) en el conjunto $\{ \pm\frac{1}{3} \}$ \\
+Se, por el item (a), que $-3$ es una de las raices racionales de $f$. Busco otras posibles raiíces racionales en el polinomio $h$ (con $n=5$) obtenido en el item (a) en el conjunto $\{ \pm\frac{1}{3} \}$ \\
 $h(-\frac{1}{3})=-\frac{208}{27}$ \\
 $h(\frac{1}{3})=0 \implies \frac{1}{3}$ es una raiz racional de f. \\
 \\
@@ -60,7 +72,7 @@ $$
 \polylongdiv[style=D]{X^4 + \frac{5}{3}X^3 - \frac{8}{3}X^2 + \frac{11}{3}X - 1}{X^2 + \frac{8}{3}X - 1}
 $$
 Factorizo el polinomio cuadratico $X^2 + \frac{8}{3}X - 1$
-$$ \Delta = (-1)^2 - 4 \cdot 1 \cdot 1=-3 $$
+$$ \Delta^2 = (-1)^2 - 4 \cdot 1 \cdot 1=-3 $$
 $$ x_+ = \frac{1 + \sqrt 3 i}{2} \in\complejos \text{ y } x_- = \frac{1 - \sqrt 3 i}{2} \in\complejos $$
 
 \textbf{Rta:}\\
