--- a/2-guia/ejercicios-2/ej-13-2.tex
+++ b/2-guia/ejercicios-2/ej-13-2.tex
@@ -1,4 +1,46 @@
 \ejercicio
 
-\separadorCorto
-\hacer
+Hallar todos los valores de $n \en \naturales$ tales que $n^2 + 1 < 2^n$.\\
+
+Pruebo algunos valores de $n$:
+
+\begin{itemize}[label=-]
+    \item $n = 1 \rightarrow 1^2 + 1 = 2 \nless 2$
+    \item $n = 2 \rightarrow 2^2 + 1 = 5 \nless 4$
+    \item $n = 3 \rightarrow 3^2 + 1 = 10 \nless 8$
+    \item $n = 4 \rightarrow 4^2 + 1 = 17 \nless 16$
+    \item $n = 5 \rightarrow 5^2 + 1 = 26 < 32$ \Tilde
+\end{itemize}
+
+Parece ser que se cumple para los $n \geq 5$. Lo pruebo por inducción corrida.\\
+
+$P(n): \text{\textquotedblleft} n^2 + 1 < 2^n \text{\textquotedblright} \paratodo n \en \naturales_{\geq 5}$\\
+
+\underline{Caso Base}:\\
+
+$
+    P(5) \text{Verdadero}
+    \sisolosi 5^2 + 1 < 2^5
+    \sisolosi 26 < 32 \Tilde
+$\\
+
+\underline{Paso Inductivo}: Sea $k \en \naturales_{\geq 5}$. Supongo $\HI{P(k)}$ Verdadero, quiero ver que $P(k + 1)$ Verdadero.
+
+\begin{align*}
+    P(k + 1) \text{Verdadero}
+    &\sisolosi (k + 1)^2 + 1 < 2^{k + 1}\\
+    &\sisolosi (k + 1)^2 + 1 < 2^k \cdot 2\\
+\end{align*}
+
+y como $(k^2 + 1) \cdot 2 < 2^k \cdot 2$ por HI, si $(k + 1)^2 + 1 \leq (k^2 + 1) \cdot 2 \entonces (k + 1)^2 + 1 < 2^k \cdot 2$ como se quiere ver.
+
+\begin{align*}
+    (k + 1)^2 + 1 \leq (k^2 + 1) \cdot 2
+    &\sisolosi k^2 + 2k + 2 \leq 2k^2 + 2\\
+    &\sisolosi 2k \leq k^2\\
+    &\underset{k > 0}{\sisolosi} 2 \leq k \Tilde \text{(Pues $k \geq 5$ por HI)}
+\end{align*}
+
+Así, $(k + 1)^2 + 1 < 2^k \cdot 2$ \quad y $\therefore P(k + 1)$ Verdadero.\\
+
+Como se cumple tanto el caso base como el paso inductivo, por el principio de inducción $P(n)$ es verdadero $\paratodo n \en \naturales$.
