Add extra-9-4. Fix 23-4

--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -12,7 +12,7 @@
 	      $\frac{b+4}{a} + \frac{5}{b} =
 		      \frac{b^2 + 4b + 5a}{ab}
 		      \flecha{quiero que}
-		      ab \divideA \frac{b^2 + 4b + 5a}{ab}\\
+		      ab \divideA b^2 + 4b + 5a\\
 		      \flecha{por}[coprimitusibilidad]
 		      \llave{l}{
 			      a | b^2 + 4b +5a \\
@@ -27,7 +27,7 @@
 			      b | 5 \\
 		      }
 	      $\\
-	      Seguro tengo que $b = \set{\pm1, \pm5} \to$ pruebo valores de $b$ y veo que valor de $a$ queda:\\
+	      Seguro tengo que $b \en \set{\pm1, \pm5} \to$ pruebo valores de $b$ y veo que valor de $a$ queda:\\
 	      $\llave{l}{
 			      b = 1 \to (a\divideA 5 ,1) \to \set{(\pm 1, 1).(\pm5,1)} \\
 			      b = -1 \to (a \divideA -3,1) \to \set{(\pm 1, -1).(\pm 3,1)} \\
