--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -70,8 +70,8 @@
 \newcommand{\conga}[1]{\stackrel{(#1)}{\congruente}}
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
-\newcommand{\ub}[2]{ \underbrace{\textstyle #1}_{#2} }
-\newcommand{\ob}[2]{ \overbrace{\textstyle #1}^{#2} }
+\newcommand{\ub}[2]{ \underbrace{\textstyle #1}_{\mathclap{#2}} }
+\newcommand{\ob}[2]{ \overbrace{\textstyle #1}^{\mathclap{#2}} }
 \def\cop{\, \perp \, }
 
 % complejos
@@ -159,12 +159,21 @@
 		\xrightarrow[\text{#2}]{\text{#1}}
 	}
 }
-% Flecha con texto
+% Si solo si con texto
 \NewDocumentCommand{\Sii}{m o}{%
 	\IfNoValueTF{#2}{%
 		\xLeftrightarrow[]{\text{#1}}
 	}{
 		\xLeftrightarrow[\text{#2}]{\text{#1}}
+	}
+}
+
+% Igual con texto
+\NewDocumentCommand{\Eq}{m o}{%
+	\IfNoValueTF{#2}{%
+            \overset{\mathclap{\text{#1}}}=
+	}{
+            \overset{\mathclap{\text{#1}}}{\underset{\mathclap{\text{#2}}}=}
 	}
 }
 
